[package]
name = "boldore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.28"
clap = { version = "4.4.1", features = ["derive"] }
regex = "1.9.4"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
scraper = "0.17.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
urlencoding = "2.1.3"
